# Sqlite4Android

./: .gitignore  CMakeLists.txt  README.md  android-build.sh  build-android.sh  build-with-cmake.sh
jni/: Android.mk  Application.mk
